classDiagram

class Server {
    +Server()
    +main(args: String[]): void$
}

class DatabaseHandler {
    -Connection connection
    +DatabaseHandler()
    -connectToDatabase(): void
    -enableForeignKeys(): void
    -createTablesIfNotExist(): void
    +closeConnection(): void
    +removeUserFromChat(user: User, chatName: String): void
    +addUser(user: User): void
    +addChat(chatname: String): void
    +addUserToChat(user: User, chatname: String): void
    +addMessage(chatName: String, message: Message): void
    +getMessages(chatname: String, time: Instant): ArrayList<message>
    -getMessagesInChat(chat: Chat, chatname: String): void
    +getChat(chatname: String): Chat
    +getAllChats(user: User): ArrayList<String>
    +main(args: String[]): void$
}



class WebsocketHandler {
    -HashMap<InetSocketAddress, String> connToUsers
    -DatabaseHandler db
    -UserChatMap userChatMap
    +WebsocketHandler(port: int, databaseHandler: DatabaseHandler)
    +onOpen(conn: WebSocket, handshake: ClientHandshake): void
    +onMessage(conn: WebSocket, incoming: String): void
    -connect(address: InetSocketAddress, username: String): void
    +send_chatlist(chat: String): void
    -enterChat(user: String, chatname: String, gson: Gson): void
    -send_message(gson: Gson, jsonobject: JsonObject): void
    +onClose(conn: WebSocket, code: int, reason: String, remote: boolean): void
    +onError(conn: WebSocket, ex: Exception): void
    +onStart(): void
}


class UserChatMap {
    -Map<String, String> userToChat
    -Map<String, Set<String>> chatToUser
    +UserChatMap()
    +put(user: String, chat: String): void
    +getChat(user: String): String
    +getUsers(chat: String): Set<String>
    +remove(user: String): void
}

%% Interfaces

class WebSocketServer {
    <<abstract>>
}


%% Inheritance
WebsocketHandler --|> WebSocketServer



%% Composition
WebsocketHandler *-- DatabaseHandler
WebsocketHandler *-- UserChatMap

%% Server creates all handlers
Server ..> WebsocketHandler : creates

